[package]
name = "box2epub"
version = "0.1.0"
authors = ["daose <15278132+daose@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.6"
tokio = { version = "0.2", features = ["full"] }
epub-builder = "0.4.7"
regex = "1.3.9"
futures = "0.3.5"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
scraper = "0.12.0"
